Removed usage of deprecated API